div added in index

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="./css/index.css" rel="stylesheet">
     <link rel="stylesheet" href="./components/header.css">
     <link rel="stylesheet" href="./components/footer.css">
+    <link rel="stylesheet" href="./css/chicken.css">
 </head>
 <body>
     <div class="header">
@@ -253,67 +254,68 @@
 
 
 <h1 id="BreakfastSnackingSpecials">Breakfast & Snacking Specials</h1>
-<div id="chunkydiv">
+<div id="topGrid" style="margin-left: 175px;">
+    <div>
+        <img src ="images/chickenDiv5.jpeg">
+        <h4> Chicken Thigh - Boneless</h4>
+        <p> Cut from the upper-leg, above the knee joint</p>
+        <div class="netWt">
+        <h5> Net wt: 1000gms</h5>
+        <h5> Gross:1026gms</h5>
+        </div>
+        <div class="cartBtnWithPrice">
+        <h4> MRP: 295</h3>
+        <button class="btn"> ADD TO CART </button>
+        </div>
+        <hr>
+        <div class="delLogo">
+        <img src="https://www.licious.in/img/default/express_delivery.svg">
+        <p>Today in 90 min</p>
+       </div>
 
-  <div class="chunkydiv1">
- <img class="breakfastsnackingimg1" src="https://d2407na1z3fc0t.cloudfront.net/prodDev/pr_4cyjya5ry5e/3/prod_display_image/1634636505.7759--2021-10-1915:11:45--1818?format=webp" alt=""/>
-  <h1 class="breakfastsnackingh1">Chunky Butter Chicken Spread</h1>
-  <h2 class="breakfastsnackingh2">Mildly spiced chunks of freshly roasted chicken blended with </h2>
-   <div class="gms">
-       <p>Net wt:200gms</p>
-       <p>Gross:200gms</p>
-   </div>
-   <div class="mrpaddtocart">
-       <div class="rupee">
-   <h1 class="mrph1">MRP:</h1>
-   <p>199</p>
-</div>
-   <button class="btn">ADD TO CART</button>
-   </div>
-         <div class="todayin90min">
-            <img  class="todayin90minimg" src="https://www.licious.in/img/default/express_delivery.svg" alt=""/>
-                <h2 class="todayin90minh2">Today in 90 min</h2>
-         </div>
-  </div>
-
-
-  <div class="chunkydiv1">
-   <img class="breakfastsnackingimg1" src="https://dao54xqhg9jfa.cloudfront.net/OMS-ProductMerchantdising/dbeb3262-60f0-eb31-9bf9-82c68a9f0e20/original/Chunky-Shawarma-Chicken-Spread_(7).jpg?format=webp" alt=""/>
-    <h1 class="breakfastsnackingh1">Chunky Shawarma Chicken Spread</h1>
-    <h2 class="breakfastsnackingh2"> A creamy base with freshly roasted chicken chunks a... </h2>
-     <div class="gms">
-         <p>Net wt:200gms</p>
-         <p>Gross:200gms</p>
-     </div>
-     <div class="mrpaddtocart">
-     <h1 class="mrph1">MRP:RS199</h1>
-     <button class="btn">ADD TO CART</button>
-     </div>
-           <div class="todayin90min">
-              <img  class="todayin90minimg" src="https://www.licious.in/img/default/express_delivery.svg" alt=""/>
-                  <h2 class="todayin90minh2">Today in 90 min</h2>
-           </div>
     </div>
 
-    <div class="chunkydiv1">
-       <img class="breakfastsnackingimg1" src="https://d2407na1z3fc0t.cloudfront.net/prodDev/pr_drokbgb2jhb/3/prod_display_image/1634375081.1749--2021-10-1614:34:41--905?format=webp" alt=""/>
-        <h1 class="breakfastsnackingh1">Chunky Sriracha Prawn Spread</h1>
-        <h2 class="breakfastsnackingh2"> A blend of freshly cooked juicy prawn chunks in a spi...</h2>
-         <div class="gms">
-             <p>Net wt:200gms</p>
-             <p>Gross:200gms</p>
-         </div>
-         <div class="mrpaddtocart">
-         <h1 class="mrph1">MRP:RS199</h1>
-        <button class="btn">ADD TO CART</button>
-         </div>
-               <div class="todayin90min">
-                  <img  class="todayin90minimg" src="https://www.licious.in/img/default/express_delivery.svg" alt=""/>
-                      <h2 class="todayin90minh2">Today in 90 min</h2>
-               </div>
+    <div>
+        <img src ="images/chickenDiv1.jpeg">
+        <h4> Chicken Curry Cut (Large Pcs)</h4>
+        <p> Half a chicken cut to chunky pieces including two legs</p>
+        <div class="netWt">
+        <h5> Net wt: 100gms</h5>
+        <h5> Gross:250gms</h5>
         </div>
-</div>
+        <div class="cartBtnWithPrice">
+        <h4> MRP: 275</h3>
+        <button class="btn"> ADD TO CART </button>
+        </div>
+        <hr>
+        <div class="delLogo">
+        <img src="https://www.licious.in/img/default/express_delivery.svg">
+        <p>Today in 90 min</p>
+       </div>
 
+    </div>
+
+    <div>
+        <img src ="images/chickenDiv9.jpeg">
+        <h4> Chicken Curry Cut (Large Pcs)</h4>
+        <p> Minced spicy chicken for a variety of dishes </p>
+        <div class="netWt">
+        <h5> Net wt: 1050gms</h5>
+        <h5> Gross:900gms</h5>
+        </div>
+        <div class="cartBtnWithPrice">
+        <h4> MRP: 305</h3>
+        <button class="btn"> ADD TO CART </button>
+        </div>
+        <hr>
+        <div class="delLogo">
+        <img src="https://www.licious.in/img/default/express_delivery.svg">
+        <p>Today in 90 min</p>
+       </div>
+
+    </div>
+    
+</div>
 <!--         -->
 
   <!-- check our blog -->
