payment page added

--- a/index.html
+++ b/index.html
@@ -195,6 +195,189 @@
             </div>
         </div>
     </div>
+<!-- sliderpart -->
+<div>
+    <div class="slides">
+        <img src="https://d2407na1z3fc0t.cloudfront.net/Slider/banner_624b2f58965ec">
+    </div>
+    <div class="slides">
+        <img src="https://d2407na1z3fc0t.cloudfront.net/Slider/banner_6249df3ca2f2c">
+    </div>
+    <div class="slides">
+        <img src="https://d2407na1z3fc0t.cloudfront.net/Slider/banner_624b30983d23a">
+    </div>
+    <div class="slides">
+        <img src="https://d2407na1z3fc0t.cloudfront.net/Slider/banner_624b30e170f6a">
+    </div>
+    <div class="slides">
+        <img src="https://d2407na1z3fc0t.cloudfront.net/Slider/banner_624b311fb62b8">
+    </div>
+    <div class="slides">
+        <img src="https://d2407na1z3fc0t.cloudfront.net/Slider/banner_624b316a2c607">
+    </div>
+    <div class="slides">
+        <img src="https://d2407na1z3fc0t.cloudfront.net/Slider/banner_624b31b303b67">
+    </div>
+    <div class="slides">
+        <img src="https://d2407na1z3fc0t.cloudfront.net/Slider/banner_624b31f376a80">
+    </div>
+</div>
+<div id ="boxImage">
+    <div id="boxImageTop">
+        <img class ="logImg" src="https://www.licious.in/img/default/loyalty_licious_logo.svg">
+        <button class="btnJoin"> JOIN NOW </button>
+    </div>
+    <div id="boxImageDown">
+        <p> Enjoy unlimited free delivery & perks crafted for the true meat lovers</p>
+    </div>
+
+</div>
+<div id="know-licious-way">
+    <h2 class="h2">Know the Licious way</h2>
+    <p>Premium
+        Produce</p>
+    <p>World-Class Central
+        Production Unit</p>
+    <p>150 Quality
+        Checks</p>
+    <p>Delivered Fresh
+        Everyday</p>
+    <p>Extraordinary
+        Cooking</p>
+</div>
+<div id="interlaced-img">
+    <img src="https://dao54xqhg9jfa.cloudfront.net/OMS-StaticBanner/b299cb5d-7ae1-a723-62e0-072314165fd4/original/static-web_(89).jpg?format=webp">
+</div>
+<!-- bestSellers -->
+<h1 id="BreakfastSnackingSpecials">Best Seller</h1>
+<div id="topGrid" style="margin-left: 175px;">
+    <div>
+        <img src="https://dao54xqhg9jfa.cloudfront.net/ProductMerchantdising/b3cdeaeb-d0f3-241f-a9cd-8a3c381570e9/original/1583852633.8405--2020-03-1020_33_53--472.jpeg?format=webp" alt="">
+        <h4>Classic Eggs - Pack Of 30</h4>
+        <p>Pack of 30 naturally laid, white eggs from healthy hens</p>
+        <div class="netWt">
+        <h5> Pieces: 30</h5>
+        </div>
+        <div class="cartBtnWithPrice">
+        <h4> MRP: 252</h3>
+        <button class="btn"> ADD TO CART </button>
+        </div>
+        <hr>
+        <div class="delLogo">
+        <img src="https://www.licious.in/img/default/express_delivery.svg">
+        <p>Today 7 PM-9 PM</p>
+       </div>
+
+    </div>
+
+    <div>
+        <img src="https://dao54xqhg9jfa.cloudfront.net/ProductMerchantdising/e8b0900a-4c94-1711-5c1a-6417417b0f00/original/1600541292.3594--2020-09-2000_18_12--738.jpeg?format=webp" alt="">
+        <h4>Premium Chicken Curry Cut</h4>
+        <p>Half a chicken cut into a mix of boneless and bone-in...</p>
+        <div class="netWt">
+        <h5> Net wt: 450gms</h5>
+        <h5> Gross:550gms</h5>
+        </div>
+        <div class="cartBtnWithPrice">
+        <h4> MRP: 199</h3>
+        <button class="btn"> ADD TO CART </button>
+        </div>
+        <hr>
+        <div class="delLogo">
+        <img src="https://www.licious.in/img/default/express_delivery.svg">
+        <p>Today 7 PM-9 PM</p>
+       </div>
+
+    </div>
+
+    <div>
+        <img src="https://d2407na1z3fc0t.cloudfront.net/prodDev/pr_ikuk3ilucko/3/prod_display_image/1634458574.9107--2021-10-1713:46:14--905?format=webp" alt="">
+        <h4>Afghani Murgh Seekh Kebab | Ready in 8 Minutes</h4>
+        <p> The classic chicken seekh kebab, marinated in... </p>
+        <div class="netWt">
+        <h5> Net wt: 4</h5>
+        <h5> Pieces: 4</h5>
+        </div>
+        <div class="cartBtnWithPrice">
+        <h4> MRP: 224</h3>
+        <button class="btn"> ADD TO CART </button>
+        </div>
+        <hr>
+        <div class="delLogo">
+        <img src="https://www.licious.in/img/default/express_delivery.svg">
+        <p>Today 7 PM-9 PM</p>
+       </div>
+
+    </div>
+    
+</div>
+
+<!-- bestSellers -->
+<h1 id="BreakfastSnackingSpecials">Boneless Cuts</h1>
+<div id="topGrid" style="margin-left: 175px;">
+    <div>
+        <img src="https://d2407na1z3fc0t.cloudfront.net/prodDev/pr_c47k6urcm1u/3/prod_display_image/1636891804.4261--2021-11-1417:40:04--1818?format=webp" alt="">
+        <h4> River Sol (Repti/Manthal) - Fillet</h4>
+        <p> Mild tasting boneless fillets of freshwater Sole, cut...</p>
+        <div class="netWt">
+        <h5> Net wt: 250gms</h5>
+        <h5> Gross:568gms</h5>
+        </div>
+        <div class="cartBtnWithPrice">
+        <h4> MRP: 489</h3>
+        <button class="btn"> ADD TO CART </button>
+        </div>
+        <hr>
+        <div class="delLogo">
+        <img src="https://www.licious.in/img/default/express_delivery.svg">
+        <p>Today 7 PM-9 PM</p>
+       </div>
+
+    </div>
+
+    <div>
+        <img src="https://d2407na1z3fc0t.cloudfront.net/prodDev/pr_mmfjrvtibub/3/prod_display_image/1636891211.467--2021-11-1417:30:11--1818?format=webp" alt="">
+        <h4> Chicken Tenders- Boneless</h4>
+        <p> Premier cut of chicken closest to the inner breast bo...</p>
+        <div class="netWt">
+        <h5> Net wt: 350gms</h5>
+        <h5> Gross:460gms</h5>
+        </div>
+        <div class="cartBtnWithPrice">
+        <h4> MRP: 245</h3>
+        <button class="btn"> ADD TO CART </button>
+        </div>
+        <hr>
+        <div class="delLogo">
+        <img src="https://www.licious.in/img/default/express_delivery.svg">
+        <p>Today 7 PM-9 PM</p>
+       </div>
+
+    </div>
+
+    <div>
+        <img src="https://d2407na1z3fc0t.cloudfront.net/prodDev/pr_8izjlf6xn0k/3/prod_display_image/1636891626.9627--2021-11-1417:37:06--1818?format=webp" alt="">
+        <h4>Basa - Fillet, Platinum Grade</h4>
+        <p> From unpolluted Indian waters, freshly cleaned, crea.. </p>
+        <div class="netWt">
+        <h5> Net wt: 450gms</h5>
+        <h5> Gross:1500gms</h5>
+        </div>
+        <div class="cartBtnWithPrice">
+        <h4> MRP: 385</h3>
+        <button class="btn"> ADD TO CART </button>
+        </div>
+        <hr>
+        <div class="delLogo">
+        <img src="https://www.licious.in/img/default/express_delivery.svg">
+        <p>Today 7 PM-9 PM</p>
+       </div>
+
+    </div>
+    
+</div>
+
+<!-- - -->
 
 <h2 id="ExploreByCategory">Explore by category</h2>
 <div id="explorebycategory">
@@ -250,34 +433,35 @@
 
 <!--  -->
 
+
 <!-- breakfast snacking specials */ -->
 
 
 <h1 id="BreakfastSnackingSpecials">Breakfast & Snacking Specials</h1>
 <div id="topGrid" style="margin-left: 175px;">
     <div>
-        <img src ="images/chickenDiv5.jpeg">
-        <h4> Chicken Thigh - Boneless</h4>
+        <img src ="https://d2407na1z3fc0t.cloudfront.net/prodDev/pr_4cyjya5ry5e/3/prod_display_image/1634636505.7759--2021-10-1915:11:45--1818?format=webp">
+        <h4> Chunky Butter Chicken Spread</h4>
         <p> Cut from the upper-leg, above the knee joint</p>
         <div class="netWt">
-        <h5> Net wt: 1000gms</h5>
-        <h5> Gross:1026gms</h5>
+        <h5> Net wt: 200gms</h5>
+        <h5> Gross:200gms</h5>
         </div>
         <div class="cartBtnWithPrice">
-        <h4> MRP: 295</h3>
+        <h4> MRP: 159</h3>
         <button class="btn"> ADD TO CART </button>
         </div>
         <hr>
         <div class="delLogo">
         <img src="https://www.licious.in/img/default/express_delivery.svg">
-        <p>Today in 90 min</p>
+        <p>Today 7 PM-9 PM</p>
        </div>
 
     </div>
 
     <div>
-        <img src ="images/chickenDiv1.jpeg">
-        <h4> Chicken Curry Cut (Large Pcs)</h4>
+        <img src ="https://dao54xqhg9jfa.cloudfront.net/OMS-ProductMerchantdising/dbeb3262-60f0-eb31-9bf9-82c68a9f0e20/original/Chunky-Shawarma-Chicken-Spread_(7).jpg?format=webp">
+        <h4> Chunky Shawarma Chicken Spread</h4>
         <p> Half a chicken cut to chunky pieces including two legs</p>
         <div class="netWt">
         <h5> Net wt: 100gms</h5>
@@ -290,14 +474,14 @@
         <hr>
         <div class="delLogo">
         <img src="https://www.licious.in/img/default/express_delivery.svg">
-        <p>Today in 90 min</p>
+        <p>Today 7 PM-9 PM</p>
        </div>
 
     </div>
 
     <div>
-        <img src ="images/chickenDiv9.jpeg">
-        <h4> Chicken Curry Cut (Large Pcs)</h4>
+        <img src ="https://d2407na1z3fc0t.cloudfront.net/prodDev/pr_1puko17mted/3/prod_display_image/1636893572.0961--2021-11-1418:09:32--1818">
+        <h4>Chunky Continental Egg Spread</h4>
         <p> Minced spicy chicken for a variety of dishes </p>
         <div class="netWt">
         <h5> Net wt: 1050gms</h5>
@@ -310,7 +494,7 @@
         <hr>
         <div class="delLogo">
         <img src="https://www.licious.in/img/default/express_delivery.svg">
-        <p>Today in 90 min</p>
+        <p>Today 7 PM-9 PM</p>
        </div>
 
     </div>
