payment page updated

--- a/chicken.html
+++ b/chicken.html
@@ -25,7 +25,7 @@
          </div> 
 
          <div id="total"></div>
-         <button > Proceed</button>
+         <button ><a href="./components/payment.html">Proceed</a></button>
 
 
     </div>
