login page added

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <img class="search-logo" src="	https://www.licious.in/img/default/search_icon.svg" >
                 </div>
                 <div class="login-cart">
-                    <a href="">
+                    <a href="./components/login.html">
                         <div class="profile">
                             <div class="login-pic">
                                 <img src="https://www.licious.in/img/default/profile_icon.svg" class="login-pic-padding">
