address page and media query added

--- a/after-login.html
+++ b/after-login.html
@@ -67,7 +67,7 @@
                                 <div class="login-pic">
                                     <img src="https://www.licious.in/img/default/profile_icon.svg" class="login-pic-padding">
                                 </div>
-                                <div class="login-text">Login</div>
+                                <div class="login-text">Hi, User</div>
                             </div>
                         </a>
                         <a href="" class="">
