--- a/fish.html
+++ b/fish.html
@@ -40,41 +40,41 @@
                 </div>
             </div>
         </div>
-        <div class="sub-header">
-            <div class="container">
-                <div class="logo">
-                    <a href="./index.html">
-                        <img src="https://www.licious.in/img/default/licious-logo.svg" alt="licious">
-                    </a>
-                </div>
-                <div class="city-location">
-                    <img class="location-icon" src="	https://www.licious.in/img/default/location_icon.svg" alt="location">
-                    <div class="address">
-                        <div class="city"> DELHI</div>
-                        <div class="location">
-                            <div class="area">Sector-11,Rohini,...</div>
-                            <img class="down-arrow" src="https://www.licious.in/img/default/down-arrow.png">
+        <div class="header-mid">
+            <div class="sub-header">
+                    <div class="logo">
+                        <a href="./index.html">
+                            <img src="https://www.licious.in/img/default/licious-logo.svg" alt="licious">
+                        </a>
+                    </div>
+                    <div class="city-location">
+                        <img class="location-icon" src="	https://www.licious.in/img/default/location_icon.svg" alt="location">
+                        <div class="address">
+                            <div class="city"> DELHI</div>
+                            <div class="location">
+                                <div class="area">Sector-11,Rohini,...</div>
+                                <img class="down-arrow" src="https://www.licious.in/img/default/down-arrow.png">
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="search-bar">
-                    <input type="text" class="search" placeholder="Search for any delicious product">
-                    <img class="search-logo" src="	https://www.licious.in/img/default/search_icon.svg" >
-                </div>
-                <div class="login-cart">
-                    <a href="">
-                        <div class="profile">
-                            <div class="login-pic">
-                                <img src="https://www.licious.in/img/default/profile_icon.svg" class="login-pic-padding">
+                    <div class="search-bar">
+                        <input type="text" class="search" placeholder="Search for any delicious product">
+                        <img class="search-logo" src="	https://www.licious.in/img/default/search_icon.svg" >
+                    </div>
+                    <div class="login-cart">
+                        <a href="./after-login.html">
+                            <div class="profile">
+                                <div class="login-pic">
+                                    <img src="https://www.licious.in/img/default/profile_icon.svg" class="login-pic-padding">
+                                </div>
+                                <div class="login-text">Hi, User</div>
                             </div>
-                            <div class="login-text">Login</div>
-                        </div>
-                    </a>
-                    <a href="" class="">
-                        <img class="cart-pic" src="https://www.licious.in/img/default/cart_icon.svg" alt="">
-                        <span class="cart-text">Cart</span>
-                    </a>
-                </div>
+                        </a>
+                        <a href="" class="">
+                            <img class="cart-pic" src="https://www.licious.in/img/default/cart_icon.svg" alt="">
+                            <span class="cart-text">Cart</span>
+                        </a>
+                    </div>
             </div>
         </div>
         <div class="category-list">
